tests/compile_fail/display/since_1_41/extra_placeholder.stderr
error: 2 positional arguments in format string, but there is 1 argument
 --> tests/compile_fail/display/since_1_41/extra_placeholder.rs:2:24
  |
2 | #[display(fmt = "Stuff({}): {}", bar)]
  |                        ^^   ^^   ---
